--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="a5">计时结束后播放完当前歌曲再停止</string>
     <string name="a6">还没有播放记录哦</string>
 
-    <string name="about">黄修情\nS3SJ130 Android兴趣班\n指导老师 涂乾文\n2018/1/12\nhttps://github.com/Xiu2017/XTMusic_Android</string>
+    <string name="about">黄修情\nS3SJ130 Android兴趣班\n指导老师 涂乾文\n2018/1/12</string>
+    <string name="github">https://github.com/Xiu2017/XTMusic_Android</string>
 </resources>
