--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="a3">退出</string>
 
     <string name="list_title">刚好遇见你</string>
-    <string name="a4">未扫描到歌曲\n试试搜索在线音乐</string>
+    <string name="a4">列表空空如也\n试试搜索在线音乐</string>
 
     <string name="group_1">本地歌曲</string>
     <string name="group_2">文件夹</string>
@@ -25,7 +25,10 @@
     <string name="a5">计时结束后播放完当前歌曲再停止</string>
     <string name="a6">还没有播放记录哦</string>
 
-    <string name="about">黄修情\nS3SJ130 Android兴趣班\n指导老师 涂乾文\n2018/1/14</string>
+    <string name="about">&#064;喵星球的匚盘君</string>
     <string name="github">https://github.com/Xiu2017/XTMusic_Android</string>
     <string name="tip">在线内容由酷狗音乐&amp;QQ音乐提供\n仅用于学习交流</string>
+
+    <string name="navigation_drawer_open">打开侧边栏</string>
+    <string name="navigation_drawer_close">关闭侧边栏</string>
 </resources>
